--- a/src/arduinodatatoexcel/Window.form
+++ b/src/arduinodatatoexcel/Window.form
@@ -128,6 +128,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Stop recording"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonStopActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButtonExport">
           <Properties>
